# calc-project

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
