[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
rusqlite = "0.26.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"