[package]
name = "calculator-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
egui = "0.22"
eframe = "0.22"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"